--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@types/node": "^16.18.104",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "axios": "^1.7.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.2.1",
     "react-parallax": "^3.5.1",
     "react-router-dom": "^6.25.1",
@@ -46,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-google-recaptcha": "^2.1.9",
     "@types/react-router-hash-link": "^2.4.9"
   }
 }
